@@ -14,6 +14,12 @@
         - command-line tools
           - rating prediction: add user-defined prediction format
             via the --prediction-line argument
+          - item prediction: always obey --relevant-users=FILE and
+            --relevant-items=FILE arguments
+        - evaluation
+          - add "filtered evaluation" protocol for item recommendation:
+            for every user, compute recommendation quality for item sets
+            filtered according to given attributes
 
 1.03	2011-06-22
         - IMPORTANT ANNOUNCEMENT: This may be the last version to support
